--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>theme2</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__content">
+                <div class="header__logo">
+                    <img src="./icon/Logo.png" alt="Logo">
+                </div>
+                <div class="header__menu">
+                    <div class="menu-item1"></div>
+                    <div class="menu-item2"></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <div class="main__categories">
+                <div class="category__item">
+                    <div class="category__bg">
+                        <img src="./img/bg-category1.jpg" alt="bg-category1">
+                    </div>
+                    <div class="category__title">
+                        Бар
+                    </div>
+                </div>
+                <div class="category__item">
+                    <div class="category__bg">
+                        <img src="./img/bg-category2.jpg" alt="bg-category2">
+                    </div>
+                    <div class="category__title">
+                        Кухня
+                    </div>
+                </div>
+                <div class="category__item">
+                    <div class="category__bg">
+                        <img src="./img/bg-category3.jpg" alt="bg-category3">
+                    </div>
+                    <div class="category__title">
+                        Кальян
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
