--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,11 @@
     <header class="header">
         <div class="container">
             <div class="header__content">
+                <div class="header__back">
+                    <div class="header__back-icon">
+                        
+                    </div>
+                </div>
                 <div class="header__logo">
                     <img src="./icon/Logo.png" alt="Logo">
                 </div>
@@ -23,7 +28,7 @@
     </header>
     <main class="main">
         <div class="container">
-            <div class="main__categories">
+            <div class="main__categories active">
                 <div class="category__item">
                     <div class="category__bg">
                         <img src="./img/bg-category1.jpg" alt="bg-category1">
@@ -49,7 +54,55 @@
                     </div>
                 </div>
             </div>
+            <div class="main__menu hide">
+                <div class="main__menu-wrapper">
+                    <div class="main__menu-content">
+                        <div class="main__menu-titles">
+                            <div class="menu__title-item">
+                                Бар
+                            </div>
+                            <div class="menu__title-item">
+                                Кухня
+                            </div>
+                            <div class="menu__title-item">
+                                Кальян
+                            </div>
+                        </div>
+                        <div class="main__menu-contacts">
+                            <div class="menu__contacts-item">
+                                <div class="contacts__item-icon">
+                                    <img src="./icon/menu-icon1.svg" alt="menu-icon1">
+                                </div>
+                                <div class="contacts__item-text">
+                                    +380 95 331 9317
+                                </div>
+                            </div>
+                            <div class="menu__contacts-item">
+                                <div class="contacts__item-icon">
+                                    <img src="./icon/menu-icon2.svg" alt="menu-icon2">
+                                </div>
+                                <div class="contacts__item-text">
+                                    г.&nbsp;Харьков,
+                                    ул.&nbsp;Дарвина&nbsp;9
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main__menu-footer">
+                        <div class="menu__footer-icon">
+                            <a href="#"><img src="./icon/menu-footer-icon1.svg" alt="menu-footer-icon1"></a>
+                        </div>
+                        <div class="menu__footer-icon">
+                            <a href="#"><img src="./icon/menu-footer-icon2.svg" alt="menu-footer-icon2"></a>
+                        </div>
+                        <div class="menu__footer-icon">
+                            <a href="#"><img src="./icon/menu-footer-icon3.svg" alt="menu-footer-icon3"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <script src="./js/main.js"></script>
 </body>
 </html>
