--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <header class="header">
         <div class="container">
             <div class="header__content">
-                <!-- <div class="header__back">
-                    <div class="header__back-icon">
-                        
-                    </div>
-                </div> -->
+                <div class="header__back hide">
+                    <div class="header__back-title"></div>
+                </div>
                 <div class="header__logo">
                     <img src="./icon/Logo.png" alt="Logo">
                 </div>
