--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="header__back-title"></div>
                 </div>
                 <div class="header__logo">
-                    <img src="./icon/Logo.png" alt="Logo">
+                    Logo
                 </div>
                 <div class="header__menu">
                     <div class="menu-item1"></div>
@@ -72,7 +72,7 @@
                                     <img src="./icon/menu-icon1.svg" alt="menu-icon1">
                                 </div>
                                 <div class="contacts__item-text">
-                                    +380 95 331 9317
+                                    +380999999999
                                 </div>
                             </div>
                             <div class="menu__contacts-item">
@@ -80,8 +80,8 @@
                                     <img src="./icon/menu-icon2.svg" alt="menu-icon2">
                                 </div>
                                 <div class="contacts__item-text">
-                                    г.&nbsp;Харьков,
-                                    ул.&nbsp;Дарвина&nbsp;9
+                                    г.&nbsp;Киев
+                                    ул.&nbsp;Пушкина 10
                                 </div>
                             </div>
                         </div>
